--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -4,3 +4,8 @@ block title
 	| Главная страница
 
 block content
+	.test
+		p ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur reprehenderit fugiat laudantium praesentium sed ab culpa cum non quos, beatae fugit corporis excepturi quod, repellendus ducimus, aliquam tempore iure sequi ullam error corrupti rerum, explicabo! Quisquam nulla qui, similique, nostrum vel nihil, reprehenderit, accusamus placeat accusantium distinctio soluta ipsum suscipit.
+		span.icon1
+		span.icon2
+		span.icon3
