--- a/dev/static/stylus/main.styl
+++ b/dev/static/stylus/main.styl
@@ -5,7 +5,7 @@
 @import '_vars.styl'
 
 // Подключаем спрайты (просто раскоментируем импорт при появлении PNG спрайтов)
-// @import '_sprite.styl'
+@import '_sprite.styl'
 
 // Подключаем миксины
 @import '_mixins.styl'
